修改类型定义

--- a/softrender/softrender.vcxproj
+++ b/softrender/softrender.vcxproj
@@ -40,10 +40,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Program Files\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Program Files\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -74,14 +75,19 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>d3d9.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="base_type.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="comm_headers.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="draw.h" />
     <ClInclude Include="fixepoint.h" />
+    <ClInclude Include="math_tool.h" />
     <ClInclude Include="matrix.h" />
+    <ClInclude Include="model.h" />
     <ClInclude Include="tool.h" />
     <ClInclude Include="triangle.h" />
     <ClInclude Include="vector.h" />
