--- a/softrender/softrender.vcxproj.filters
+++ b/softrender/softrender.vcxproj.filters
@@ -39,6 +39,18 @@
     <ClInclude Include="fixepoint.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="math_tool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="base_type.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Console.cpp">
