--- a/softrender/softrender.vcxproj
+++ b/softrender/softrender.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="math_tool.h" />
     <ClInclude Include="matrix.h" />
     <ClInclude Include="model.h" />
+    <ClInclude Include="quaternion.h" />
     <ClInclude Include="tool.h" />
     <ClInclude Include="triangle.h" />
     <ClInclude Include="vector.h" />
