一些quaternion的操作

--- a/softrender/softrender.vcxproj
+++ b/softrender/softrender.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="comm_headers.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="draw.h" />
+    <ClInclude Include="euler_rotate.h" />
     <ClInclude Include="fixepoint.h" />
     <ClInclude Include="math_tool.h" />
     <ClInclude Include="matrix.h" />
